bk_ida/gccida/c1/store_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:755:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode fieldmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:771:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v21; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:772:4: error: expected ';' after expression
rtx v22; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:772:5: error: use of undeclared identifier 'v22'
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:780:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:781:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:785:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v35; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:786:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:787:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:790:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:790:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:794:4: error: expected ';' after expression
rtx v44; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:794:5: error: use of undeclared identifier 'v44'
rtx v44; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:795:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v45; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:798:4: error: expected ';' after expression
rtx v48; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:798:5: error: use of undeclared identifier 'v48'
rtx v48; // r13 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:799:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:805:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/expmed.c:805:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/store_bit_field/src/obj/expmed.o] Error 1
